<resources>
    <string name="facebook_application_id">2849788738607557</string>
    <string name="facebook_login_protocol_scheme">fb2849788738607557</string>
    <string name="facebook_client_token">abc6ccbd310eb5cef1a3df5a37d541b8</string>


    <string name="app_name" translatable="false">Isolaatti</string>

    <string name="fui_default_toolbar_title" translatable="false">External sign in methods</string>

    <string name="title_activity_sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_with_your_account">Sign in with your existing account</string>
    <string name="create_account">Create an account</string>
    <string name="or">or</string>
    <string name="welcome">Welcome</string>
    <string name="select_signin_method">Select your sign in method</string>
    <string name="email_and_password">Email and password</string>
    <string name="other_signin_methods">Other methods</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="unable_to_sign_in">It was not possible to sign in</string>
    <string name="unable_to_sign_in_message">An error ocurred while trying to validate your session. Try again in a couple of minutes.</string>
    <string name="accept">Accept</string>
    <string name="retry">Retry</string>
    <string name="unable_to_connect_server">It was not possible to connect with the server. Check your Internet connection.</string>
    <string name="invalid_token_message">Your session is not valid. Sign in again.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="new_discussion">New</string>
    <string name="write_here_markdown_compatible">Start your discussion here, markdown is compatible...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="discussions">Discussions</string>
    <string name="no_posts_to_show">There are no discussions to show</string>
    <string name="signing_in">Signing in...</string>
    <string name="profile_info">Info</string>
    <string name="discussion">Discussions</string>
    <string name="number_of_likes">Likes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="bad_credentials">Your username or password is no correct. Try again...</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_timeout">Connection timed out</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
</resources>
